--- a/README
+++ b/README
@@ -1,4 +1,20 @@
-PHP-Structure-MVC
-=================
+								PHP : Structure MVC
+==========================================================================
 
 Création d'une structure MVC en PHP
+
+26/11/2014:
+
+1)	Création du dépot
+2)	Ajout des premiers fichiers sources
+
+	- UML du projet
+	- Modèle DB
+	- .htaccess
+	- Webroot/index.php
+	- Webroot/css/style.css
+
+
+Signed-off-by: Vincent Raine <vincent.raine@viacesi.fr>
+
+============================================================================
